--- a/ninestar.html
+++ b/ninestar.html
@@ -1,34 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/icofont.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Krub&family=Poppins:wght@300&family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Krub&family=Poppins:wght@300&family=Raleway:wght@500&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
-<header>
-    <section class="container">
-        <section class="heading-sec">
-            <div class="header-logo">
-                <h2>NineStars</h2>
-            </div>
-            <div class="nav-sec">
-                <ul>
-                    <li><a href="">home</a></li>
-                    <li> <a href="">about us</a>  </li>
-                    <li><a href=""> services</a></li>
-                    <li> <a href=""> portfolio</a></li>
-                    <li> <a href=""> team</a></li>
-                    <li> <a href=""> drop down</a></li>
-                    <li> <a href=""> contact </a></li>
+    <!-- <header>
+        <section class="back">
+            <section class="container">
+                <section class="heading-sec">
+                    <div class="header-logo">
+                        <h2>NineStars</h2>
+                    </div>
+                    <div class="nav-sec">
+                        <ul>
+                            <li><a class="active" href="#">home</a></li>
+                            <li> <a href="">about us</a> </li>
+                            <li><a href=""> services</a></li>
+                            <li> <a href=""> portfolio</a></li>
+                            <li> <a href=""> team</a></li>
+                            <li> <a href=""> drop down</a></li>
+                            <li> <a href=""> contact </a></li>
+                            <button>get started</button>
+                           <label for="" class="check">                         <i class="icofont-navigation-menu"></i>
+                           </label>
+   
+                        </ul>
+
+                    </div>
+                </section>
+            </section>
+        </section>
+    </header>
+    <section class="banner-section">
+        <section class="container">
+            <div class="ban">
+                <div class="ban-text">
+                    <h1>Bettter digital  experience with  Ninestars</h1>
+                    <p>We are team of talented designers making websites with Bootstrap</p>
                     <button>get started</button>
-                </ul>
+                </div>
+                <div class="ban-img">
+                    <img src="	https://bootstrapmade.com/demo/templates/Ninestars/assets/img/hero-img.svg" alt="">
+                </div>
+            </div>
+        </section>
+
+    </section> -->
+
+    <section class="volupt-sec">
+        <section class="container">
+            <div class="voluput" style="background-color: #fff;">
+                <div class="vol-img">
+                    <img src="https://bootstrapmade.com/demo/templates/Ninestars/assets/img/about-img.svg" alt="">
+                </div>
+                <div class="vol-text">
+                    <h1>Voluptatem dignissimos provident quasi </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit </p>
+                    <div class="vol-1">
+                        <div class="vol-over">
+                            <div class="vol-ico">
+                                <i class="icofont-file-text"></i>
+                            </div>
+
+                            <h1>Corporis voluptates sit
+                            </h1>
+                            <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                        </div>
+                        <div class="vol-over">
+                            <div class="vol-ico">
+                                <i class="icofont-cube"></i>
+
+                            </div>
+                            <h1>Corporis voluptates sit
+                            </h1>
+                            <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </section>
-</header>
+    <section class="services">
+        <section class="container">
+            <h3>services</h3>
+            <h1>Check out the great services we offer</h1>
+            <hr>
+            <div class="serv-flex">
+                <div class="service-secs">
+                    <div class="serv-ico">
+                        <i class="icofont-basketball"></i>
+                    </div>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
+                </div>
+
+                <div class="service-secs">
+                    <div class="serv-ico">
+                        <i class="icofont-basketball"></i>
+                    </div>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
+                </div>
+
+                <div class="service-secs">
+                    <div class="serv-ico">
+                        <i class="icofont-basketball"></i>
+                    </div>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
+                </div>
+
+                <div class="service-secs">
+                    <div class="serv-ico">
+                        <i class="icofont-basketball"></i>
+                    </div>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
+                </div>
+            </div>
+        </section>
+    </section>
+
 </body>
+
 </html>
