--- a/ninestar.html
+++ b/ninestar.html
@@ -93,10 +93,11 @@
     </section>
     <section class="services">
         <section class="container">
-            <h3>services</h3>
+            <h4>services</h4>
             <h1>Check out the great services we offer</h1>
             <hr>
             <div class="serv-flex">
+                <div class="ser">
                 <div class="service-secs">
                     <div class="serv-ico">
                         <i class="icofont-basketball"></i>
@@ -112,7 +113,8 @@
                     <h3>Lorem Ipsum</h3>
                     <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
                 </div>
-
+            </div>
+            <div class="ser">
                 <div class="service-secs">
                     <div class="serv-ico">
                         <i class="icofont-basketball"></i>
@@ -128,6 +130,7 @@
                     <h3>Lorem Ipsum</h3>
                     <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
                 </div>
+            </div>
             </div>
         </section>
     </section>
